tools/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spinnaker-service
  namespace: spinnaker
spec:
  ingressClassName: uat-ing
  rules:
  - host: qtcd.site.com
    http:
     paths:
     - path: /
       pathType: Prefix
       backend:
          service:
            name: spin-deck
            port:
              number: 9000
  - host: qtcd-gate.site.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spin-gate
            port:
              number: 8084
